feat: add authentication with clerk

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://neondb_owner:G6UoChbTYR3l@ep-falling-breeze-a5hqvs5t.us-east-2.aws.neon.tech/neondb?sslmode=require"
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_a2V5LXJvYmluLTIyLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_XIposyi1kdcmOYpNMAh1Uf4qhQOWBs2bkiHH0z5x2d
